<resources>
    <string name="app_name">Blog app</string>
    <string name="sign_in">sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_post">Add Post</string>
    <string name="sign_out">Sign Out</string>
</resources>
