<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shaban.blogapp.activities.SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fNameSignUpEditText"
        android:hint="@string/first_name"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lNameSignUpEditText"
        android:layout_below="@+id/fNameSignUpEditText"
        android:hint="@string/last_name"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailSignUpEditText"
        android:layout_below="@+id/lNameSignUpEditText"
        android:hint="@string/email"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordSignUpEditText"
        android:layout_below="@+id/emailSignUpEditText"
        android:hint="@string/password"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SignUpBtn"
        android:layout_below="@+id/passwordSignUpEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"/>

</RelativeLayout>
