<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shaban.blogapp.activities.SignInActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailSignInEditText"
        android:hint="@string/email"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordSignInEditText"
        android:layout_below="@+id/emailSignInEditText"
        android:hint="@string/password"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signInBtn"
        android:layout_below="@+id/passwordSignInEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createAccountBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"/>
</RelativeLayout>
